# hello-packaging

hello-packaging/: meson.build
hello-packaging/data/: hello-packaging.desktop.in  hello-world.appdata.xml
hello-packaging/po/: POTFILES  com.github.GoldenGladier.hello-packaging.pot  de.po  es.po
hello-packaging/src/: Application.vala
